src/builder/tests/snapshots/ciboulette2postgres__builder__tests__multi-2.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
"cte_articles_data" AS (
  SELECT
    "public"."articles"."title"
  FROM
    "cte_peoples_main"
    INNER JOIN "public"."people-article" ON "public"."people-article"."people_id" = "cte_peoples_main"."id"
    INNER JOIN "public"."articles" ON "public"."articles"."id" = "public"."people-article"."article_id";
