src/builder/tests/snapshots/ciboulette2postgres__builder__tests__multi.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
SELECT
  *
FROM
  "public"."articles"
UNION
ALL
SELECT
  *
FROM
  "public"."peoples";
