src/builder/tests/snapshots/ciboulette2postgres__builder__tests__no_params.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
INSERT INTO
  "public"."mysimpletable" DEFAULT
VALUES
  RETURNING *;
