src/builder/tests/snapshots/ciboulette2postgres__builder__tests__no_table.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
;
