src/builder/tests/snapshots/ciboulette2postgres__builder__tests__non_included.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
SELECT
  "public"."peoples"."id" :: TEXT AS "id",
  $0 :: TEXT AS "type",
  NULL :: json AS "data"
FROM
  "public"."peoples";
